--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -218,6 +218,15 @@ a {
 
 /*=============== E-BOOKS ===============*/
 
+/* Container principal dos E-books */
+
+.E-books_container {
+  display: block ruby; /* Define o contêiner como flexível */
+  justify-content: space-between; /* Distribui o espaço restante entre os itens */
+  gap: 40px; /* Define um espaço de 40px entre os itens */
+  position: relative;
+}
+
 /* Estilos para cada E-book */
 .Ebook-1, .Ebook-2, .Ebook-3 {
   display: flex;
