--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -340,7 +340,10 @@ img {
 
 @media screen and (max-width: 1150px) {
   .E-books_container {
-    
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    position: relative;
   }
 
   .topic {
