--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -485,8 +485,7 @@ img {
 }
 
 .home__container,
-.home__container-2,
-.home__container-99 {
+.home__container-2, {
   padding-top: 8rem;
 }
 
@@ -1422,13 +1421,6 @@ li.description-3 b {
     position: relative;
   }
 
-  .home__container-99 {
-    grid-template-columns: 350px;
-    justify-content: center;
-    z-index: 99;
-    position: relative;
-  }
-
   .contact__data {
     width: 350px;
     padding: 4rem 1.5rem;
@@ -1766,17 +1758,6 @@ li.description-3 b {
 
   .home__container,
   .home__container-2 {
-    grid-template-columns: repeat(2, 468px);
-    gap: 2rem 4rem;
-    align-items: center;
-    /* padding-block: 13.5rem;  */
-    /* padding-top: 15rem; */
-    z-index: 7;
-    position: relative;
-    /* z-index: 3; */
-  }
-
-  .home__container {
     grid-template-columns: repeat(2, 468px);
     gap: 2rem 4rem;
     align-items: center;
