trocando a classe da div abaixo do inicio abaixo da section da pagina universidade.html

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1600,6 +1600,20 @@ li.description-3 b {
     height: 48px;
   }
 
+  .home__container-4 {
+    grid-template-columns: repeat(2, 468px);
+    gap: 2rem 4rem;
+    align-items: center;
+    padding-block: 7.5rem;
+    flex-direction: column;
+    /* padding-top: 15rem; */
+    z-index: 7;
+    position: relative;
+    /* z-index: 3; */
+    display: flex;
+    justify-content: center;
+  }
+
   .geometry-box {
     transform: scale(1.2);
   }
