--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -433,6 +433,7 @@ img {
   flex-direction: column;
   align-items: center;
   position: relative;
+  background-color: #f1f0f5;
 }
 
 .nav__link::after {
