--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1613,12 +1613,12 @@ li.description-3 b {
     gap: 2rem 4rem;
     padding-block: 7.5rem;
     flex-direction: column;
-    /* padding-top: 15rem; */
     z-index: 7;
     position: relative;
-    /* z-index: 3; */
     display: flex;
     justify-content: center;
+    align-items: center;
+    align-content: center;
   }
 
   .curve-footer {
