--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -341,6 +341,7 @@ img {
 @media screen and (max-width: 1150px) {
   .E-books_container {
     display: flex;
+    flex-direction: row;
     align-items: center;
   }
 
