--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1732,6 +1732,11 @@ li.description-3 b {
     grid-row: 1 / 3;
   }
 
+  .home__img-88 {
+    width: 200px;
+  }
+
+
   .video {
     width: 800px;
   }
