inserindo a div container-preco

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1552,6 +1552,13 @@ li.description-3 b {
     margin-inline: auto;
   }
 
+  .container-preco {
+    width: 461px;
+    height: 137px;
+    padding: 10px;
+    flex-direction: row;
+    gap: 10px;
+  }
 
   
   .section__title-1::after,
