adicionando novamente a propriedade flex-direction column

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1556,7 +1556,7 @@ li.description-3 b {
     width: 461px;
     height: 137px;
     padding: 10px;
-    flex-direction: ;
+    flex-direction: column;
   }
 
   
