--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1174,7 +1174,23 @@ li.description-3 b {
 /*=============== Container-Preco ===============*/
 
 
-.container-preco {
+.container-preco-1 {
+  width: 461px;
+  height: 167px;
+  display: flex;
+  padding: 10px;
+  justify-content: center;
+}
+
+.container-preco-2 {
+  width: 461px;
+  height: 167px;
+  display: flex;
+  padding: 10px;
+  justify-content: center;
+}
+
+.container-preco-3 {
   width: 461px;
   height: 167px;
   display: flex;
