--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1235,6 +1235,12 @@ li.description-3 b {
   flex-direction: column;
 }
 
+.home__container-99 {
+  flex-direction: column;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
 .topic {
   margin-bottom: 20px;
   align-content: center;
@@ -1250,6 +1256,12 @@ li.description-3 b {
       justify-content: center;
       display: flex;
   }
+
+  .home__container-99 {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
 }
 
 
