trocando a linha 1238 do codigo styles.css

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1236,9 +1236,9 @@ li.description-3 b {
 }
 
 .home__container-99 {
-  flex-direction: column;
-  align-items: flex-start;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: flex;
 }
 
 .topic {
