adicionando a div home__container-99 no tamanho de tela 1150px

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -345,6 +345,12 @@ img {
     flex-direction: row;
   }
 
+  .home__container-99 {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+}
+
   .topic {
     margin-bottom: 20px;
     align-content: center;
