--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1245,6 +1245,7 @@ li.description-3 b {
   flex-direction: column;
   align-items: flex-start;
   flex-direction: column;
+  margin-top: 10px;
 }
 
 .topic {
