--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -347,7 +347,7 @@ img {
 
   .home__container-99 {
     align-items: center;
-    margin-top: 30px;
+    margin-top: 9rem;
     justify-content: center;
     display: flex;
 }
@@ -1246,7 +1246,7 @@ li.description-3 b {
   flex-direction: column;
   align-items: flex-start;
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 9rem;
   align-items: center;
   justify-content: center;
   justify-items: center;
@@ -1270,7 +1270,7 @@ li.description-3 b {
 
   .home__container-99 {
     align-items: center;
-    margin-top: 30px;
+    margin-top: 9rem;
     justify-content: center;
     display: flex;
     align-items: center;
@@ -1858,7 +1858,7 @@ li.description-3 b {
 
   .home__container-99 {
     align-items: center;
-    margin-top: 30px;
+    margin-top: 9rem;
     justify-content: center;
     display: flex;
     align-items: center;
