--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -347,6 +347,7 @@ img {
 
   .home__container-99 {
     align-items: center;
+    margin-top: 8rem;
     justify-content: center;
     display: flex;
 }
