--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -340,7 +340,7 @@ img {
 
 @media screen and (max-width: 1150px) {
   .E-books_container {
-    display: grid;
+    /* display: flex; */
     align-items: center;
     flex-direction: row;
   }
