aletrando display e-books-container

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,6 +222,7 @@ a {
 
 .E-books_container {
   display: grid;  
+  flex-direction: row;
   justify-content: space-between; /* Distribui o espaço restante entre os itens */
   gap: 40px; /* Define um espaço de 40px entre os itens */
   position: relative;
