--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1245,12 +1245,12 @@ li.description-3 b {
 
 .home__container-99 {
   flex-direction: column;
-  align-items: flex-start;
-  flex-direction: column;
   margin-top: 10rem;
   align-items: center;
   justify-content: center;
   justify-items: center;
+  padding-left: 250px;
+  padding-right: 250px;
 }
 
 .topic {
