--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1861,7 +1861,7 @@ li.description-3 b {
 
   .home__container-99 {
     align-items: center;
-    margin-top: 10rem;
+    /* margin-top: 10rem; */
     justify-content: center;
     display: flex;
     align-items: center;
