adicionando as propriedades justify-content e display na div com classe home__name

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1847,6 +1847,8 @@ li.description-3 b {
   .home__name {
     align-self: flex-end;
     width: 100%;
+    justify-content: center;
+    display: flex;
   }
 
   .home__info {
