adicionando padding left de 30px na div com classr home__description

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -620,6 +620,7 @@ font-size: 20px;
   align-items: center;
   margin-inline: 15px;
   margin-bottom: 1.5rem;
+  padding-left: 30px;
 }
 
 /* #inicio {
