inserindo as propriedades display: flex, e flex-direction: column. Na div com classe .container-valor

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1203,11 +1203,15 @@ li.description-3 b {
   padding: 10px;
 }
 
+.container-valor {
+  display: flex;
+  flex-direction: column;
+}
 
 .container-preco-1 {
   width: 461px;
   height: 167px;
-  display: flex;
+  /* display: flex; */
   padding: 10px;
   justify-content: center;
 }
@@ -1215,7 +1219,7 @@ li.description-3 b {
 .container-preco-2 {
   width: 461px;
   height: 167px;
-  display: flex;
+  /* display: flex; */
   padding: 10px;
   justify-content: center;
 }
@@ -1223,7 +1227,7 @@ li.description-3 b {
 .container-preco-3 {
   width: 461px;
   height: 167px;
-  display: flex;
+  /* display: flex; */
   padding: 10px;
   justify-content: center;
 }
