--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -514,6 +514,11 @@ img {
   padding-top: 8rem;
 }
 
+.home__name-4 {
+  font-size: 30px;
+  text-align: center;
+}
+
 .home__name {
   font-size: 30px;
   text-align: center;
@@ -1862,6 +1867,11 @@ li.description-3 b {
   .home__name,
   .home__description {
     text-align: initial;
+  }
+  
+  .home__name-4 {
+    align-self: flex-end;
+    width: 100%;
   }
 
   .home__name {
