comentando a rpopriedade text-align: center da div com classe home__name-22

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1891,7 +1891,7 @@ li.description-3 b {
   
   .home__name-22 {
     font-size: 30px;
-    text-align: center;
+    /* text-align: center; */
   }
   
   .home__name-4 {
