--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -516,7 +516,7 @@ img {
 
 .home__name-4 {
   font-size: 30px;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .home__name-22 {
@@ -526,7 +526,7 @@ img {
 
 .home__name-44 {
   font-size: 30px;
-  /* text-align: center; */
+  text-align: center;
 }
 
 .home__name-principal {
