retirando a propriedade text-align: center

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -514,6 +514,21 @@ img {
   padding-top: 8rem;
 }
 
+.home__name-4 {
+  font-size: 30px;
+  text-align: center;
+}
+
+.home__name-22 {
+  font-size: 30px;
+  text-align: center;
+}
+
+.home__name-44 {
+  font-size: 30px;
+  text-align: center;
+}
+
 .home__name-principal {
   font-size: 40px;
   text-align: center;
