adicionando display: flex

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1921,12 +1921,11 @@ li.description-3 b {
   
   .home__name-22 {
     font-size: 30px;
-    /* text-align: center; */
+    display: flex;
   }
   
   .home__name-4 {
     align-self: flex-end;
-    width: 100%;
     width: 100%;
     display: flex;
   }
@@ -1934,6 +1933,7 @@ li.description-3 b {
   .home__name-44 {
     align-self: flex-end;
     width: 100%;
+    display: flex;
   }
 
   .home__name-principal {
