--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1234,9 +1234,9 @@ li.description-3 b {
 }
 
 .container-preco-1 {
-  width: 461px;
+  /* width: 461px;
   height: 167px;
-  display: flex;
+  display: flex; */
   padding: 10px;
   flex-direction: row;
   justify-content: center;
